style.css
:root{
  --color-white: #fff;
  --color-black: #1a1a1a;
  --color-purple: #3600ff;
  --color-red: #8b0000;
  --color-magenta: #7c00ff;
  --color-gray: #3e3d41;
}

* {
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: "Quicksand", sans-serif;
    color: var(--color-white);
  }

  .loading {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--color-black);
    z-index: 9999;
    opacity: 1;
    transition: opacity 1s ease;
  }

  .loading-spinner {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    border: 4px solid var(--color-gray);
    border-top-color: var(--color-white);
    animation: spin 1s linear infinite;
  }

  @keyframes spin {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
  
  .loading.fade-out {
    opacity: 0;
  }

  h2{
    font-family: 'Bebas Neue';
    letter-spacing: 2px;
  }

  h5{
    font-family: 'Bebas Neue';
    font-size: 32px !important;
    font-weight: 500;
    margin-bottom: 20px;
  }

  a{
    text-decoration: none !important;
    color: var(--color-white) !important;
  }
  
  ul {
    list-style-type: none;
  }
  
  header {
    height: 6.5em;
    background-color: transparent;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 99;
    color: var(--color-white);
    padding: 0 7vw;
    background-color: var(--color-black);
  }
  
  header .wraper {
    height: 110px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
  
  header .wraper .navbar ul {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
  
  header .wraper .navbar ul li {
    margin: 0.5rem 1rem;
    position: relative;
  }
  
  header .wraper .navbar ul li a {
    text-decoration: none;
    color: var(--color-white);
    padding: 0.7rem;
    -webkit-transition: all 0.2s ease;
    transition: all 0.5s ease;
    font-size: 20px;
    font-weight: 600;
    border-radius: 10px;

  }

  header .wraper .mobil-menu {
    display: none;
  }

  @keyframes desaparecer {
    0% { opacity: 1; }
    100% { 
      opacity: 0; 
      display: none; 
    }
  }

  .sugest-trad {
      animation: desaparecer 1s forwards 4.5s;
  }
  
  .main-section {
    background: var(--color-purple);
    background: linear-gradient(45deg, var(--color-purple) 9%, var(--color-magenta) 100%);
    background-size: cover;
    background-position: center;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    height: 100vh;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    position: relative;
    flex-direction: column;
    color: var(--color-white);
  }
  
  .main-section h1 {
    font-size: 120px;
    letter-spacing: 20px;
    font-weight: 100;
    margin-bottom: -30px;
  }

  .title{
    padding-left:20px;
  }
  
  .title .letter {
    display: inline-block;
    line-height: 1.4em;
    font-family: 'Bebas Neue', sans-serif !important;
  }

  .subtitle {
    font-family: 'Quicksand';
    font-size: 2em;
    font-weight: 200;
    color: var(--color-white);
    opacity: 0;
    animation: fade-in-animation 1s 0.5s ease-in forwards;
  }

  /* Fade-in para o "fullstack dev" */
  @keyframes fade-in-animation {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

  .scroll-down {
    height: 60px;
    width: 30px;
    border: 2px solid var(--color-white);
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    bottom: 40px;
    border-radius: 80px;
    cursor: pointer;
  }
  .scroll-down::before,
  .scroll-down::after {
    content: "";
    position: absolute;
    top: 20%;
    left: 50%;
    height: 7px;
    width: 7px;
    transform: translate(-50%, -100%);
    background-color: var(--color-white);
    border-radius: 10px;
    animation: scroll-down 1.5s ease-in-out infinite;
  }
  
  @keyframes scroll-down {
    0% {
      top: 80%;
      opacity: 0;
    }
    30% {
      opacity: 1;
    }
    60% {
      opacity: 1;
    }
    100% {
      top: 30%;
      opacity: 0;
    }
  }

  .scroll-desc{
    position: absolute;
    bottom: 10px;
    font-size: 16px;
    left: 50%;
    transform: translateX(-50%);
  }

  #back-top {
    display: inline-block;
    background-color: var(--color-black);
    width: 50px;
    height: 50px;
    text-align: center;
    border-radius: 10px;
    position: fixed;
    bottom: 30px;
    right: 30px;
    transition: background-color .3s, 
      opacity .5s, visibility .5s;
    opacity: 0;
    visibility: hidden;
    z-index: 1000;
  }
  #back-top::after {
    content: "\f077";
    font-family: FontAwesome;
    font-weight: normal;
    font-style: normal;
    font-size: 2em;
    line-height: 50px;
    color: var(--color-white);
  }
  #back-top:hover {
    cursor: pointer;
    background-color: var(--color-purple);
  }
  #back-top:active {
    background-color: (var(--color-magenta));
  }
  #back-top.show {
    opacity: 1;
    visibility: visible;
  }

  .about-me{
    width: 100%;
    padding: 100px 0;
    background: var(--color-black);
  }

  .pic{
    height: auto;
    width:  420px;
    margin-right: 20px;
  }

  .about{
    width: 1130px;
    max-width: 90%;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-around;
  }

  .text{
    width: 540px;
  }

  .text h2{
    font-size: 50px;
    font-weight: 600;
    margin-bottom: 30px;
  }

  .text p{
    font-size: 18px;
    line-height: 22px;
  }

  .highlight{
    font-family: 'Bebas Neue';
    padding-left: 10px;
    padding-right: 12px;
    background-color: var(--color-white);
    color: var(--color-purple) !important;
    border-radius: 10px;
    font-weight: 600;
  }

  .style-icons{
    font-size: 45px;
    margin-right: 10px;
  }

  .data{
    margin-top: 30px;
  }
  .btn-contatos{
    font-size: 18px;
    background: var(--color-gray);
    color: var(--color-white);
    text-decoration: none;
    border: none;
    padding: 8px 25px;
    border-radius: 6px;
    transition: 0.5s;
    font-weight: 600;
  }
  .btn-contatos:hover{
    background: var(--color-purple);
  }

  .projetos{
    background: linear-gradient(var(--color-black), var(--color-gray));
    height: 100%;
    padding-top: 5%;
    padding-bottom: 5%;
  }

  .projetos h2{
    font-size: 70px; 
    padding-bottom: 10px; 
    margin-top: 0; 
    text-align: center;
  }

  .col-md-6{
    width: 48% !important;
  }

  .proj-info{
    text-align: center;
    padding: 2em !important;
  }

  .row .link{
    --bs-gutter-x: 0; 
    height: auto; 
    margin-bottom: 3%;
  }

  .link{
    padding: 2em;
    border-radius: 15px;
    background-color: var(--color-black);
    transition: 0.3s ease;
    height: 500px;
  }

  .link:hover{
    -webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.75);
    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.75);
    transform: translateY(-5px);
    background-color: var(--color-purple);
  }

  .link-2{
    margin-top: 20px;
    margin-right: auto;
  }

  .link-3{
    margin-top: 20px;
    padding: 2em;
  }

  .contatos{
    background: var(--color-black);
    height: 70vh;
    line-height: 32px;
  }

  /* Footer */
  .footer-main{
    padding-top: 50px;
    background: var(--color-black);
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1030;
  }
  .address-box {
      padding: 10px 0;
      margin-bottom: 30px;
  }
  .add-content{
      padding-left: 70px;
  }
  .add-content h5 {
      font-size: 17px;
      color: var(--color-white);
      padding: 0;
      font-weight: 500;
      margin-bottom: 10px;
  }

  .footer-2{
      background: linear-gradient(135deg, var(--color-purple), var(--color-magenta));
  }
  /* Footer */
  
  @media screen and (max-width: 720px) {
      
    header .wraper .navbar ul li {
      margin: 0.5rem 0;
    }

    .main-section h1{
      font-size: 60px;
      letter-spacing: 10px;
      margin-bottom: -10px;
    }

    .pic{
      width: 250px;
      margin-right: 0;
    }

    .title{
      padding-left: 10px;
    }

    .subtitle{
      font-size: 25px;
    }

    .about-me{
      padding: 60px 0;
    }

    .about{
      display: block;
    }

    .text{
      width: fit-content;
    }
    .text h2{
      font-size: 35px;
      margin-top: 25px;
    }

    .projetos h2{
      font-size: 50px;
    }

    .proj-info{
      padding: 0 !important;
    }

    .link-2{
      margin-top: 0;
    }

    .link-3{
      margin-top: 3em;
      margin-bottom: 2em;
    }

    .col-6{
      width: 100% !important;
      text-align: center;
    }

    .col-6 img{
      margin-bottom: 20px;
    }

    .col-md-6{
      width: 100% !important;
    }
  }

  .add-content{
    padding-left: 5%;
  }

  ::-webkit-scrollbar {
    width: 0;
  }

